[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "shap>=0.44",
    "pyarrow>=12.0",
    "laserbeamsize>=2.4.1",
    "beamprofiler>=1.2.0",
    "scipy>=1.17.1",
    "scikit-image>=0.26.0",
]
